2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Manager.cs: Remove some dead code.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Manager.cs: Fix eol-style.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Manager.cs: Update according to DB API changes.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Manager.cs: Update according to DB API changes.

2009-06-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile:
	* Manager.cs: Added.
